--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Panda",
   "dependencies": {
     "hubot": "^2.19.0",
+    "hubot-circleci-notify": "0.0.4",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
