--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hubot": "^2.19.0",
     "hubot-circleci-notify": "0.0.4",
     "hubot-diagnostics": "0.0.1",
+    "hubot-github-repo-event-notifier2": "^1.3.9",
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.2.0",
